# market-intelligence

./: .gitignore  AGENTS.md  DEPLOY.md  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: data_analyst.py  graph.py  reporter.py  researcher.py  tools.py
backend/app/api/routes/: analyze.py  ingest.py  stocks.py
backend/app/core/: config.py
backend/app/db/: client.py  models.py
backend/app/ingestion/: csv_parser.py  loader.py  validator.py
backend/app/schemas/: requests.py  responses.py
backend/app/services/: embeddings.py  gemini_client.py  indicators.py  summarizer.py
backend/app/utils/: datetime.py  filehash.py
backend/tests/: test_analyze.py  test_ingest.py
frontend/: pyproject.toml  requirements.txt  streamlit_app.py
frontend/.streamlit/: config.toml
infra/: render.yaml  supabase.sql
