[project]
name = "ai-equity-research-agent"
version = "0.1.0"
description = "Production-grade, multi-agent stock analyst"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = ["backend", "frontend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
