[project]
name = "ai-equity-research-backend"
version = "0.1.0"
description = "FastAPI backend for AI Equity Research Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.103.0",
    "uvicorn[standard]==0.24.0",
    "pandas==2.0.3",
    "pydantic==2.4.0",
    "pydantic-settings==2.0.3",
    "requests==2.31.0",
    "supabase==2.4.0",
    "psycopg[binary]==3.1.14",
    "pgvector==0.2.4",
    "google-generativeai==0.3.0",
    "python-multipart==0.0.6",
    "langgraph==0.0.69",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
