[project]
name = "ai-equity-research-frontend"
version = "0.1.0"
description = "Streamlit frontend for AI Equity Research Agent"
requires-python = ">=3.10"
dependencies = [
    "streamlit==1.41.1",
    "requests==2.32.3",
    "plotly>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]

[dependency-groups]
dev = []

[tool.ruff]
line-length = 100
target-version = "py310"
